<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Mr.zhu345@gmail.com">feiyu_orinnx</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
